Debug loading/error messages not appearing by adjusting CSS to be visible with fixed header

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,3 +6,8 @@
   font-size: calc(10px + 2vmin);
   text-align: center;
 }
+
+h2 {
+  position: relative;
+  top: 6rem;
+}
